kubernetes/monitoring/prometheus/base/service-ingress.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: prom
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: prom
spec:
  ingressClassName: nginx-internal
